tests/unit/language/errors/undefined_variable.arche
// RUN: %arche -o %t %s > %t.out 2>&1 ; grep -q "Undefined symbol" %t.out

@allow_pure_proc
proc main() {
  let x := undefined_var;
}
